Fix alignments of blocks and buttons on tools page

--- a/aidants_connect_habilitation/static/scss/main-habilitation.scss
+++ b/aidants_connect_habilitation/static/scss/main-habilitation.scss
@@ -134,33 +134,40 @@ h3, .h3 {
   border: 1px solid colors.$off-yellow-aidants;
   box-sizing: border-box;
   box-shadow: 10px 10px 0 colors.$off-yellow-aidants;
-}
+  height: 100%; // to fill space in parent column box
+  display: flex; // for child content proper display
+  flex-direction: column;
 
-
-.card-ressource {
   .h1 {
     font-size: 1.5rem;
     text-transform: none;
   }
+
   .h2, .h3 {
     font-size: 1.125rem;
   }
-}
 
-.card-content {
-  padding: 2rem;
-}
-
-
-.card-ressource img {
+  img {
     object-fit: cover;
-    height: 100%;
     width: 100%;
+  }
+
+  .card-content {
+    padding: 2rem;
+    flex-grow: 1; // to fill all remaining space in parent .card-resource
+    display: flex; // for proper display of child content (p and button box)
+    flex-direction: column;
+
+    p {
+      flex-grow: 1; // in order to "push" the button-box at the end
+    }
+  }
+
+  .button-box {
+    transform: translateY(4rem);
+  }
 }
 
-.card-ressource .button-box {
-  transform: translateY(4rem);
-}
 
 .tag {
   display: flex;
